# llm-from-scratch

./: .gitignore  COURSE.md  README.md  README.zh-CN.md  course-roadmap.jsx  requirements.txt  wrangler.jsonc
.claude/: settings.local.json
.github/workflows/: deploy-pages.yml
labs/: __init__.py
labs/phase1_text_and_data/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/phase1_text_and_data/phase_1/: __init__.py  dataloader.py  tokenizer.py  types.py
labs/phase1_text_and_data/sample_data/: input.txt
labs/phase1_text_and_data/scripts/: grade.py
labs/phase1_text_and_data/tests/: test_lab1_tokenizer.py  test_lab2_dataloader.py
labs/phase2_attention/phase_2/: attention.py
labs/phase2_attention/scripts/: grade.py
labs/phase2_attention/tests/: test_lab1_attention.py
labs/phase3_transformer/phase_3/: gpt_model.py  transformer.py
labs/phase4_pretraining/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/phase5_generation/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/phase6_classification/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/phase7_lora/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/phase8_instruction_tuning/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/phase9_moe/: COURSE.md  README.md  conftest.py  pyproject.toml
labs/shared/: __init__.py  testing_utils.py
website/: index.html  next.config.ts  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
website-old/: index.html  package.json
website-old/src/: App.tsx
website/src/: global.css
(+110 files in other folders)
