[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phase-1-text-and-data"
version = "0.1.0"
description = "Phase 1: BPE Tokenizer and Data Loading for LLM From Scratch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["phase_1*"]
